# cudex

./: .gitignore  ARCHIVE.md  CONTRIBUTING.md  README.md  TODO.md  e2b-spike-and-architecture-plan.md  hosted-agent-backend-integration-guide.md  plan-for-hosted-full-agent-runtime.md
codex-rs/app-server/: README.md
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/hosted-agent/: BUILD.bazel  Cargo.toml
codex-rs/hosted-agent/src/: fake.rs  hosted_agent_tests.rs  http.rs  lib.rs  types.rs
codex-rs/thread-store/: Cargo.toml
codex/codex-rs/: Cargo.toml
docs/: pre-coworker-verification.md
e2b/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  README.md  package-lock.json  package.json  pgtyped.config.json  tsconfig.json
e2b/migrations/: 0001_control_plane.sql  0002_ticket_purposes.sql  0003_artifact_immutability.sql  0004_tenant_object_locations.sql  0005_shared_object_locations.sql  0006_workspace_preparations.sql  0007_connection_generation.sql  0008_restore_lineage.sql  0009_patch_applications.sql  0010_operation_subtypes.sql  0011_child_operation_identity.sql  0012_lease_interactions.sql  0013_reusable_process_interactions.sql  0014_codex_reference_sets.sql  0015_codex_reference_revisions.sql  0016_codex_reference_clear_tombstones.sql
e2b/poc/: .env.example  README.md  compose.yaml  garage.toml.template
e2b/scripts/: build-codex-artifact.sh  build-template-image.sh  hosted-codex-poc.sh  install-cudex.sh  live-lifecycle-canary.mjs  publish-template.sh  verify-cudex-release.mjs  verify-template.mjs
e2b/src/: archive-manifest.ts  bootstrap.ts  (+68 more)
(+286 files in other folders)
