[package]
edition.workspace = true
license.workspace = true
name = "codex-hosted-agent"
version.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
codex-exec-server = { workspace = true }
codex-protocol = { workspace = true }
codex-tools = { workspace = true }
codex-utils-path-uri = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
